deploy: e8f7ca9665054dc9d9a078f901d7268b8f373c10

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>dyad-generated-app</title>
     <!-- This comment is added to help with deployment caching. -->
     
-    <script type="module" crossorigin src="/anbae/assets/main-BOiSFNdH.js"></script>
-    <link rel="stylesheet" crossorigin href="/anbae/assets/main-DjOCZkoN.css">
+    <script type="module" crossorigin src="/assets/main-DVHFxyKo.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/main-DjOCZkoN.css">
   </head>
 
   <body>
