deploy: 44ec5c3f2e4dc9ef5bcedded875a067f0ea28dc0

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>dyad-generated-app</title>
+    <title>Anbae – isn't just everything?</title>
     <!-- This comment is added to help with deployment caching. -->
     
     <script type="module" crossorigin src="/assets/main-DVHFxyKo.js"></script>
