deploy: 3fb9331c09a5b3154e699cd0eb2d18e3fe6f51dd

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Anbae – isn't just everything?</title>
     <!-- This comment is added to help with deployment caching. -->
     
-    <script type="module" crossorigin src="/assets/main-DVHFxyKo.js"></script>
+    <script type="module" crossorigin src="/assets/main-CKAWLRGN.js"></script>
     <link rel="stylesheet" crossorigin href="/assets/main-DjOCZkoN.css">
   </head>
 
