deploy: af9f33aba0c6c8fec05904cd2bed9769742b4901

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Anbae – isn't just everything?</title>
     <!-- This comment is added to help with deployment caching. -->
     
-    <script type="module" crossorigin src="/assets/main-CKAWLRGN.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/main-DjOCZkoN.css">
+    <script type="module" crossorigin src="/assets/main-_3sy6TaC.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/main-BuHVkRKN.css">
   </head>
 
   <body>
