--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Anbae – isn't just everything?</title>
     <!-- This comment is added to help with deployment caching. -->
     
-    <script type="module" crossorigin src="/assets/main-_3sy6TaC.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/main-BuHVkRKN.css">
+    <script type="module" crossorigin src="/your-repo-name/assets/main-BwfIc8-5.js"></script>
+    <link rel="stylesheet" crossorigin href="/your-repo-name/assets/main-BuHVkRKN.css">
   </head>
 
   <body>
