--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Anbae – isn't just everything?</title>
     
-    <script type="module" crossorigin src="/assets/main-CMw1_KFy.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/main-BuHVkRKN.css">
+    <script type="module" crossorigin src="/assets/main-BJEbuGRN.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/main-EE888lY4.css">
   </head>
 
   <body>
