deploy: 79975f2dabc2a5a7dbee7a00265e201fe3e20c42

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Anbae – isn't just everything?</title>
+    <title>anbae - isn't just everything?</title>
     
-    <script type="module" crossorigin src="/assets/main-Ci8EQx1g.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/main-EE888lY4.css">
+    <script type="module" crossorigin src="/assets/main-CTWv7to5.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/main-DZohdcjS.css">
   </head>
 
   <body>
