deploy: b16a97c1500ca2190e7d7ca09937410c2ab956b5

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>anbae - isn't just everything?</title>
     
-    <script type="module" crossorigin src="/assets/main-CTWv7to5.js"></script>
+    <script type="module" crossorigin src="/assets/main-PrDFp7BT.js"></script>
     <link rel="stylesheet" crossorigin href="/assets/main-DZohdcjS.css">
   </head>
 
