--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>anbae - isn't just everything?</title>
     
-    <script type="module" crossorigin src="/assets/main-CmWSPb3P.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/main-DZohdcjS.css">
+    <script type="module" crossorigin src="/assets/main-C579L_D5.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/main-BnGvBKRF.css">
   </head>
 
   <body>
