deploy: 891f80c23f3c1e0478186be18a37ccff76103e8f

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>anbae - isn't just everything?</title>
     
-    <script type="module" crossorigin src="/assets/main-CO-nqS-u.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/main-BhqNAy0a.css">
+    <script type="module" crossorigin src="/assets/main-yK9twEn8.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/main-B60afADL.css">
   </head>
 
   <body>
