--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>anbae - isn't just everything?</title>
     
-    <script type="module" crossorigin src="/assets/main-yK9twEn8.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/main-B60afADL.css">
+    <script type="module" crossorigin src="/assets/main-DvG5dZ1Z.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/main-DWHoOo-L.css">
   </head>
 
   <body>
