--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>anbae - isn't just everything?</title>
     
-    <script type="module" crossorigin src="/assets/main-DnS9w-Dc.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/main-Dq5VLBh7.css">
+    <script type="module" crossorigin src="/assets/main-BVTdQ_1j.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/main-5Qjxrodb.css">
   </head>
 
   <body>
