--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>anbae - isn't just everything?</title>
     
-    <script type="module" crossorigin src="/assets/main-BVTdQ_1j.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/main-5Qjxrodb.css">
+    <script type="module" crossorigin src="/assets/main-Bh0RHyRJ.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/main-B9CeEZla.css">
   </head>
 
   <body>
