--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>anbae - isn't just everything?</title>
     
-    <script type="module" crossorigin src="/assets/main-CGDoJZLH.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/main-BmYo1B2v.css">
+    <script type="module" crossorigin src="/assets/main-Dy5-jahF.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/main-KTJsKH0P.css">
   </head>
 
   <body>
