deploy: 4dc17090846ba98dcd772dd6783f9ad9c93da746

--- a/404.html
+++ b/404.html
@@ -3,15 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>Redirecting...</title>
-  <script type="text/javascript">
-    // This script redirects all 404 errors back to the original path within your application.
-    // This is a common workaround for Single-Page Applications (SPAs) deployed on GitHub Pages
-    // when using client-side routing (like React Router's BrowserRouter).
-    // It ensures that refreshing a sub-path (e.g., /dashboard) will reload the SPA at that path.
-    var path = window.location.pathname;
-    var query = window.location.search;
-    var hash = window.location.hash;
-    window.location.replace('/' + path + query + hash);
+  <script>
+    // Store the full path that led to the 404 page in sessionStorage
+    // and then redirect to the root of the site.
+    sessionStorage.redirect = location.href;
+    location.href = location.origin;
   </script>
 </head>
 <body>
