--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         }
       }(window.location));
     </script>
-    <script type="module" crossorigin src="/assets/main-DmTAkwo6.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/main-KTJsKH0P.css">
+    <script type="module" crossorigin src="/assets/main-BFPQA5w2.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/main-YppbQ2P_.css">
   </head>
 
   <body>
