--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         }
       }(window.location));
     </script>
-    <script type="module" crossorigin src="/assets/main-BFPQA5w2.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/main-YppbQ2P_.css">
+    <script type="module" crossorigin src="/assets/main-BPXD6EPB.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/main-CkJRt5OS.css">
   </head>
 
   <body>
