--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         }
       }(window.location));
     </script>
-    <script type="module" crossorigin src="/assets/main-BPXD6EPB.js"></script>
+    <script type="module" crossorigin src="/assets/main--FldaJbj.js"></script>
     <link rel="stylesheet" crossorigin href="/assets/main-CkJRt5OS.css">
   </head>
 
