--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         }
       }(window.location));
     </script>
-    <script type="module" crossorigin src="/assets/main--FldaJbj.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/main-CkJRt5OS.css">
+    <script type="module" crossorigin src="/assets/main-DsKcDX5i.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/main-DP35u2Rl.css">
   </head>
 
   <body>
