deploy: 5625ac5cabc24cd6fc94e3e5cfce455e1b4015c7

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         }
       }(window.location));
     </script>
-    <script type="module" crossorigin src="/assets/main-DsKcDX5i.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/main-DP35u2Rl.css">
+    <script type="module" crossorigin src="/assets/main-Bo-ZXTpq.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/main-DAgZReSe.css">
   </head>
 
   <body>
