--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         }
       }(window.location));
     </script>
-    <script type="module" crossorigin src="/assets/main-BUSZL4p-.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/main-DJlQYBUj.css">
+    <script type="module" crossorigin src="/assets/main-BHPIGV8h.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/main-Dyvtu_5c.css">
   </head>
 
   <body>
