--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         }
       }(window.location));
     </script>
-    <script type="module" crossorigin src="/assets/main-DjNC3G64.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/main-P6P2kR-y.css">
+    <script type="module" crossorigin src="/assets/main-D2Pf6EFZ.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/main-Im6SYBrw.css">
   </head>
 
   <body>
