deploy: cbba2c8b44590828e7ccb246fe102dfc2f12cf69

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         }
       }(window.location));
     </script>
-    <script type="module" crossorigin src="/assets/main-D2Pf6EFZ.js"></script>
+    <script type="module" crossorigin src="/assets/main-DNyzYiNN.js"></script>
     <link rel="stylesheet" crossorigin href="/assets/main-Im6SYBrw.css">
   </head>
 
