--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         }
       }(window.location));
     </script>
-    <script type="module" crossorigin src="/assets/main-B0xHh_oh.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/main-Bd-GIx7c.css">
+    <script type="module" crossorigin src="/assets/main-CWlxGfJ4.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/main-BtLiU48A.css">
   </head>
 
   <body>
