--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         }
       }(window.location));
     </script>
-    <script type="module" crossorigin src="/assets/main-AgjZ96vX.js"></script>
-    <link rel="stylesheet" crossorigin href="/assets/main-DnHsc9L_.css">
+    <script type="module" crossorigin src="/assets/main-_JEEjRhH.js"></script>
+    <link rel="stylesheet" crossorigin href="/assets/main-BmK9q12r.css">
   </head>
 
   <body>
